Add race page